kubernetes/apps/network/internal/remote-services/services/sabnzbd.yaml
# TODO: Has issue

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-sabnzbd
  namespace: network
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-sabnzbd
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-sabnzbd
addressType: IPv4
ports:
  - port: 8081
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-sabnzbd
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "sabnzbd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "sabnzbd"
    gethomepage.dev/description: "NZB Downloader"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/sabnzbd"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sabnzbd.png"
    gethomepage.dev/widget.type: "sabnzbd"
    gethomepage.dev/widget.url: http://${SETTINGS_NAS_IP}:8081/sabnzbd
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_SABNZBD_KEY}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:8081
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /sabnzbd
          pathType: Prefix
          backend:
            service:
              name: remote-internal-sabnzbd
              port:
                number: 8081
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
